<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  
	 <properties> 
	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	  <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	  <maven.compiler.source>1.8</maven.compiler.source>
	  <maven.compiler.target>1.8</maven.compiler.target>
	  <version.lyo>2.4.0.M1</version.lyo>
	 </properties>
  
	<modelVersion>4.0.0</modelVersion>
	<groupId>verifit</groupId>
	<artifactId>analysis</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>Verifit OSLC Analysis</name>
	
	 <repositories>
	  <repository>
	    <id>lyo-releases</id>
	    <name>Eclipse Lyo Releases</name>
	    <url>https://repo.eclipse.org/content/repositories/lyo-releases/</url>
	    <snapshots>
	      <enabled>false</enabled>
	    </snapshots>
	  </repository>
	  
	  <repository>
	    <id>lyo-snapshots</id>
	    <name>Eclipse Lyo Snapshots</name>
	    <url>https://repo.eclipse.org/content/repositories/lyo-snapshots/</url>
	    <releases>
	      <enabled>false</enabled>
	    </releases>
	  </repository>
	 </repositories>
  
	<dependencies>
	
		<!-- Adaptor-specific dependencies -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.21</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
		  <groupId>io.swagger</groupId>
		  <artifactId>swagger-jaxrs</artifactId>
		  <version>1.5.17</version>
		</dependency>
	
		<!-- Lyo dependencies -->
		<dependency>
			<groupId>org.eclipse.lyo.oslc4j.core</groupId>
			<artifactId>oslc4j-core</artifactId>
			<version>${version.lyo}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.lyo.oslc4j.core</groupId>
			<artifactId>oslc4j-jena-provider</artifactId>
			<version>${version.lyo}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.lyo.oslc4j.core</groupId>
			<artifactId>oslc4j-wink</artifactId>
			<version>${version.lyo}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.lyo.oslc4j.core</groupId>
			<artifactId>oslc4j-json4j-provider</artifactId>
			<version>${version.lyo}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.lyo.server</groupId>
			<artifactId>oauth-core</artifactId>
			<version>${version.lyo}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.lyo.server</groupId>
			<artifactId>oauth-consumer-store</artifactId>
			<version>${version.lyo}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.lyo.server</groupId>
			<artifactId>oauth-webapp</artifactId>
			<version>${version.lyo}</version>
			<type>war</type>
		</dependency>
		<dependency>
			<groupId>org.eclipse.lyo.clients</groupId>
			<artifactId>oslc-java-client</artifactId>
			<version>${version.lyo}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.lyo.store</groupId>
			<artifactId>store-core</artifactId>
			<version>4.0.0-SNAPSHOT</version>
		</dependency>
		
		<!-- Servlet-related dependencies -->
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>
	
		<!-- Test dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>3.8.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- load & set properties -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>properties-maven-plugin</artifactId>
				<version>1.0.0</version>
				<executions>
					<execution>
						<id>load</id>
						<phase>initialize</phase>
						<goals>
						<goal>read-project-properties</goal>
						</goals>
						<configuration>
						<files>
							<file>${project.basedir}/VeriFitAnalysis.properties</file>
						</files>
						</configuration>
					</execution>
					<execution>
						<id>set</id>
						<goals>
							<goal>set-system-properties</goal>
						</goals>
						<configuration>
							<properties>
								<property>
									<name>jetty.port</name>
									<value>${adapter_port}</value>
								</property>
								<!-- add this for HTTPS
								<property>
									<name>https.port</name>
									<value>${adapter_port}</value>
								</property>
								-->
							</properties>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- jetty server -->
			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>9.3.9.v20160517</version>
				<configuration>
					<webAppConfig>
						<contextPath>/analysis</contextPath>
					</webAppConfig>
					<reload>automatic</reload>
					<scanIntervalSeconds>5</scanIntervalSeconds>					
					<jettyXml>
				      ${project.basedir}/src/main/webapp/jetty-config/jetty.xml,${project.basedir}/src/main/webapp/jetty-config/jetty-http.xml
				      <!-- add this for HTTPS ,${project.basedir}/src/main/webapp/jetty-config/jetty-ssl.xml,${project.basedir}/src/main/webapp/jetty-config/jetty-https.xml-->
				    </jettyXml>
				</configuration>
      		</plugin>
			<!-- .war creation -->
      		<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-war-plugin</artifactId>
			    <configuration>
			        <webResources>
			            <resource>
			                <filtering>true</filtering>
			                <directory>src/main/webapp</directory>
			                <includes>
			                    <include>**/web.xml</include>
			                </includes>
			            </resource>
			        </webResources>
			        <warSourceDirectory>src/main/webapp</warSourceDirectory>
			        <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
			    </configuration>
			</plugin>
		</plugins>
	</build>

</project>